// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Styled(div)
  className="oauth-providers"
>
  <OAuthProvider
    format={[Function]}
    identityProvider={
      Object {
        "backgroundColor": "#000",
        "iconPath": "/some/path",
        "key": "foo",
        "name": "Foo",
      }
    }
    key="foo"
    returnTo=""
  />
  <OAuthProvider
    format={[Function]}
    identityProvider={
      Object {
        "backgroundColor": "#00F",
        "helpMessage": "Help message!",
        "iconPath": "/icon/path",
        "key": "bar",
        "name": "Bar",
      }
    }
    key="bar"
    returnTo=""
  />
</Styled(div)>
`;

exports[`should render correctly 2`] = `
<Styled(div)>
  <IdentityProviderLink
    backgroundColor="#000"
    iconPath="/some/path"
    name="Foo"
    url="/sessions/init/foo?return_to="
  >
    <span>
      login.login_with_x.Foo
    </span>
  </IdentityProviderLink>
</Styled(div)>
`;

exports[`should render correctly 3`] = `
<Styled(div)>
  <IdentityProviderLink
    backgroundColor="#00F"
    iconPath="/icon/path"
    name="Bar"
    url="/sessions/init/bar?return_to="
  >
    <span>
      login.login_with_x.Bar
    </span>
  </IdentityProviderLink>
  <HelpTooltip
    className="oauth-providers-help"
    overlay="Help message!"
  />
</Styled(div)>
`;

exports[`should use the custom label formatter 1`] = `
<Styled(div)>
  <IdentityProviderLink
    backgroundColor="#000"
    iconPath="/some/path"
    name="Foo"
    url="/sessions/init/foo?return_to="
  >
    <span>
      custom_format.Foo
    </span>
  </IdentityProviderLink>
</Styled(div)>
`;
